Se implementa seguridad en prodruct y se crea el enum de unidadMedida