@@ -16,10 +16,13 @@ import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ProductServiceImpl implements ProductService {
+
+    // ── Constantes ────────────────────────────────────────
+    private static final String PRODUCTO_NO_ENCONTRADO = "Producto no encontrado con id: ";
+    private static final BigDecimal MAX_VALUE = new BigDecimal("99999999.999");
 
     private final ProductRepository productRepository;
     private final ProductMapper productMapper;
@@ -35,7 +38,7 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.findAll()
                 .stream()
                 .map(productMapper::toDto)
-                .collect(Collectors.toList());
+                .toList(); // S1: reemplaza Collectors.toList()
     }
 
     @Override
@@ -44,7 +47,7 @@ public class ProductServiceImpl implements ProductService {
         return productRepository.findById(id)
                 .map(productMapper::toDto)
                 .orElseThrow(() -> new ResourceNotFoundException(
-                        "Producto no encontrado con id: " + id));
+                        PRODUCTO_NO_ENCONTRADO + id)); // S2: usa constante
     }
 
     @Override
@@ -71,7 +74,7 @@ public class ProductServiceImpl implements ProductService {
 
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(
-                        "Producto no encontrado con id: " + id));
+                        PRODUCTO_NO_ENCONTRADO + id)); // S2: usa constante
 
         if (productRepository.countByNameAndLocationAndIdNot(
                 request.getName().trim(), request.getLocation().trim(), id) > 0) {
@@ -98,69 +101,22 @@ public class ProductServiceImpl implements ProductService {
 
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(
-                        "Producto no encontrado con id: " + id));
+                        PRODUCTO_NO_ENCONTRADO + id)); // S2: usa constante
 
-        if (request.getName() != null || request.getLocation() != null) {
-            String nombreActual = request.getName() != null ?
-                    request.getName().trim() : product.getName();
-            String sedeActual = request.getLocation() != null ?
-                    request.getLocation().trim() : product.getLocation();
-
-            if (productRepository.countByNameAndLocationAndIdNot(
-                    nombreActual, sedeActual, id) > 0) {
-                throw new BusinessException(
-                        "Ya existe el producto '" + nombreActual +
-                                "' en " + sedeActual);
-            }
-        }
-
-        if (request.getName() != null && !request.getName().isBlank()) {
-            if (request.getName().length() < 2) {
-                throw new ValidationException("El nombre debe tener mínimo 2 caracteres");
-            }
-            if (request.getName().length() > 100) {
-                throw new ValidationException("El nombre no puede superar 100 caracteres");
-            }
-            product.setName(request.getName());
-        }
+        validatePatchDuplicado(id, request, product);
+        validatePatchName(request, product);
+        validatePatchPrice(request, product);
+        validatePatchStock(request, product);
+        validatePatchDate(request, product);
 
         if (request.getCategory() != null && !request.getCategory().isBlank()) {
             product.setCategory(request.getCategory());
         }
-
         if (request.getLocation() != null && !request.getLocation().isBlank()) {
             product.setLocation(request.getLocation());
         }
-
         if (request.getUnitOfMeasure() != null && !request.getUnitOfMeasure().isBlank()) {
             product.setUnitOfMeasure(request.getUnitOfMeasure());
-        }
-
-        if (request.getSalePrice() != null) {
-            if (request.getSalePrice().compareTo(BigDecimal.ZERO) <= 0) {
-                throw new ValidationException("El precio de venta debe ser mayor a cero");
-            }
-            if (request.getSalePrice().compareTo(new BigDecimal("99999999.999")) > 0) {
-                throw new ValidationException("El precio no puede superar 99,999,999.999");
-            }
-            product.setSalePrice(request.getSalePrice());
-        }
-
-        if (request.getStock() != null) {
-            if (request.getStock().compareTo(BigDecimal.ZERO) < 0) {
-                throw new ValidationException("El stock no puede ser negativo");
-            }
-            if (request.getStock().compareTo(new BigDecimal("99999999.999")) > 0) {
-                throw new ValidationException("El stock no puede superar 99,999,999.999");
-            }
-            product.setStock(request.getStock());
-        }
-
-        if (request.getStartDate() != null) {
-            if (request.getStartDate().isAfter(LocalDate.now())) {
-                throw new ValidationException("La fecha de inicio no puede ser una fecha futura");
-            }
-            product.setStartDate(request.getStartDate());
         }
 
         return productMapper.toDto(productRepository.save(product));
@@ -173,7 +129,7 @@ public class ProductServiceImpl implements ProductService {
 
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(
-                        "Producto no encontrado con id: " + id));
+                        PRODUCTO_NO_ENCONTRADO + id)); // S2: usa constante
 
         if (product.getStock().compareTo(BigDecimal.ZERO) > 0) {
             throw new BusinessException(
@@ -184,7 +140,70 @@ public class ProductServiceImpl implements ProductService {
         productRepository.deleteById(id);
     }
 
-    // ── Validaciones ─────────────────────────────────────
+    // ── Validaciones patch (extraídas para reducir Cognitive Complexity) ──
+
+    private void validatePatchDuplicado(UUID id, ProductPatchDTO request, Product product) {
+        if (request.getName() == null && request.getLocation() == null) {
+            return;
+        }
+        String nombre = request.getName() != null ? request.getName().trim() : product.getName();
+        String sede   = request.getLocation() != null ? request.getLocation().trim() : product.getLocation();
+
+        if (productRepository.countByNameAndLocationAndIdNot(nombre, sede, id) > 0) {
+            throw new BusinessException("Ya existe el producto '" + nombre + "' en " + sede);
+        }
+    }
+
+    private void validatePatchName(ProductPatchDTO request, Product product) {
+        if (request.getName() == null || request.getName().isBlank()) {
+            return;
+        }
+        if (request.getName().length() < 2) {
+            throw new ValidationException("El nombre debe tener mínimo 2 caracteres");
+        }
+        if (request.getName().length() > 100) {
+            throw new ValidationException("El nombre no puede superar 100 caracteres");
+        }
+        product.setName(request.getName());
+    }
+
+    private void validatePatchPrice(ProductPatchDTO request, Product product) {
+        if (request.getSalePrice() == null) {
+            return;
+        }
+        if (request.getSalePrice().compareTo(BigDecimal.ZERO) <= 0) {
+            throw new ValidationException("El precio de venta debe ser mayor a cero");
+        }
+        if (request.getSalePrice().compareTo(MAX_VALUE) > 0) { // S2: usa constante
+            throw new ValidationException("El precio no puede superar 99,999,999.999");
+        }
+        product.setSalePrice(request.getSalePrice());
+    }
+
+    private void validatePatchStock(ProductPatchDTO request, Product product) {
+        if (request.getStock() == null) {
+            return;
+        }
+        if (request.getStock().compareTo(BigDecimal.ZERO) < 0) {
+            throw new ValidationException("El stock no puede ser negativo");
+        }
+        if (request.getStock().compareTo(MAX_VALUE) > 0) { // S2: usa constante
+            throw new ValidationException("El stock no puede superar 99,999,999.999");
+        }
+        product.setStock(request.getStock());
+    }
+
+    private void validatePatchDate(ProductPatchDTO request, Product product) {
+        if (request.getStartDate() == null) {
+            return;
+        }
+        if (request.getStartDate().isAfter(LocalDate.now())) {
+            throw new ValidationException("La fecha de inicio no puede ser una fecha futura");
+        }
+        product.setStartDate(request.getStartDate());
+    }
+
+    // ── Validaciones generales ────────────────────────────
 
     private void validateId(UUID id) {
         if (id == null) {
@@ -196,7 +215,14 @@ public class ProductServiceImpl implements ProductService {
         if (request == null) {
             throw new ValidationException("La solicitud no puede estar vacía");
         }
+        validateRequestName(request);
+        validateRequestFields(request);
+        validatePriceRange(request.getSalePrice());
+        validateStockRange(request.getStock());
+        validateRequestDate(request);
+    }
 
+    private void validateRequestName(ProductRequestDTO request) {
         if (request.getName() == null || request.getName().isBlank()) {
             throw new ValidationException("El nombre del producto es obligatorio");
         }
@@ -206,39 +232,45 @@ public class ProductServiceImpl implements ProductService {
         if (request.getName().length() > 100) {
             throw new ValidationException("El nombre del producto no puede superar los 100 caracteres");
         }
+    }
 
+    private void validateRequestFields(ProductRequestDTO request) {
         if (request.getCategory() == null || request.getCategory().isBlank()) {
             throw new ValidationException("La categoría del producto es obligatoria");
         }
-
         if (request.getLocation() == null || request.getLocation().isBlank()) {
             throw new ValidationException("La sede del producto es obligatoria");
         }
-
         if (request.getUnitOfMeasure() == null || request.getUnitOfMeasure().isBlank()) {
             throw new ValidationException("La unidad de medida es obligatoria");
         }
-
         if (request.getSalePrice() == null) {
             throw new ValidationException("El precio de venta es obligatorio");
         }
-        if (request.getSalePrice().compareTo(BigDecimal.ZERO) <= 0) {
-            throw new ValidationException("El precio de venta debe ser mayor a cero");
-        }
-        if (request.getSalePrice().compareTo(new BigDecimal("99999999.999")) > 0) {
-            throw new ValidationException("El precio de venta no puede superar 99,999,999.999");
-        }
-
         if (request.getStock() == null) {
             throw new ValidationException("El stock es obligatorio");
         }
-        if (request.getStock().compareTo(BigDecimal.ZERO) < 0) {
+    }
+
+    private void validatePriceRange(BigDecimal price) {
+        if (price.compareTo(BigDecimal.ZERO) <= 0) {
+            throw new ValidationException("El precio de venta debe ser mayor a cero");
+        }
+        if (price.compareTo(MAX_VALUE) > 0) { // S2: usa constante
+            throw new ValidationException("El precio de venta no puede superar 99,999,999.999");
+        }
+    }
+
+    private void validateStockRange(BigDecimal stock) {
+        if (stock.compareTo(BigDecimal.ZERO) < 0) {
             throw new ValidationException("El stock no puede ser negativo");
         }
-        if (request.getStock().compareTo(new BigDecimal("99999999.999")) > 0) {
+        if (stock.compareTo(MAX_VALUE) > 0) { // S2: usa constante
             throw new ValidationException("El stock no puede superar 99,999,999.999");
         }
+    }
 
+    private void validateRequestDate(ProductRequestDTO request) {
         if (request.getStartDate() == null) {
             throw new ValidationException("La fecha de inicio es obligatoria");
         }
